HL-NFX-0049 - Fix footer bar overlap issue

--- a/src/components/footerBar/FooterBar.module.scss
+++ b/src/components/footerBar/FooterBar.module.scss
@@ -5,6 +5,9 @@
   bottom: 0;
   right: 0;
   left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   padding: $layout-spacing-xxsm-abs $layout-spacing-lg;
   background-color: $colors-background-primary-opaque;
@@ -27,7 +30,10 @@
 }
 
 .textWrapper {
-  @extend %layout-absolute-fill;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: 0 auto;
   display: flex;
   flex-direction: row;
   align-items: center;
